Fix form field spacing

--- a/_sass/components/_forms.scss
+++ b/_sass/components/_forms.scss
@@ -157,7 +157,8 @@ a.definition {
   background-color: #ffebee;
 }
 
-#cuForm .field {
+#cuForm .field,
+.form-field {
   margin-bottom: 10px;
   padding-bottom: 10px;
   padding-top: 10px;
